--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>获奖记录展示</title>
+    <title>Xusy2024's Blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>获奖记录</h1>
+        <h1>个人介绍</h1>
         <div id="awards-list"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
