--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a url="GaoKao.html">高考倒计时</a>
+    <a href="GaoKao.html">高考倒计时</a>
 </body>
 </html>
