--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Cyan_X Blog</title>
-  <link rel="shortcut icon" href=/favicon.ico">
+  <link rel="icon" href=/favicon.ico">
 </head>
 <body>
   <a href="/GaoKao.html">高考倒计时</a>
